separated auth from users, added isloggedin middleware, updated routes
