# swagger/swagger_output.json
@@ -7,7 +7,7 @@
   },
   "host": "fish-tracker-api.herokuapp.com",
   "basePath": "/api",
-  "tags": ["Users"],
+  "tags": ["users","auth"],
   "schemes": [
     "http",
     "https"
@@ -28,7 +28,7 @@
   "paths": {
     "/users/verifywithotp": {
       "post": {
-        "tags": ["Users"],
+        "tags": ["users"],
         "description": "",
         "parameters": [
           {
@@ -59,7 +59,7 @@
     },
     "/users/updateadmin/{id}": {
       "patch": {
-        "tags": ["Users"],
+        "tags": ["users"],
         "description": "",
         "parameters": [
           {
@@ -74,7 +74,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "isAdmin": {
+                "isAdmin\r": {
                   "example": "any"
                 }
               }
@@ -93,7 +93,7 @@
     },
     "/users/registerwithotp": {
       "post": {
-        "tags": ["Users"],
+        "tags": ["users"],
         "description": "",
         "parameters": [
           {
@@ -133,7 +133,7 @@
     },
     "/users/getusers": {
       "get": {
-        "tags": ["Users"],
+        "tags": ["users"],
         "description": "",
         "parameters": [],
         "responses": {
@@ -145,7 +145,7 @@
     },
     "/users/{id}": {
       "get": {
-        "tags": ["Users"],
+        "tags": ["users"],
         "description": "",
         "parameters": [
           {
@@ -165,46 +165,9 @@
         }
       }
     },
-    "/users/login": {
-      "post": {
-        "tags": ["Users"],
-        "description": "",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/users/update/{id}": {
       "patch": {
-        "tags": ["Users"],
+        "tags": ["users"],
         "description": "",
         "parameters": [
           {
@@ -244,7 +207,7 @@
     },
     "/users/delete/{id}": {
       "delete": {
-        "tags": ["Users"],
+        "tags": ["users"],
         "description": "",
         "parameters": [
           {
@@ -263,7 +226,7 @@
     },
     "/users/createuser": {
       "post": {
-        "tags": ["Users"],
+        "tags": ["users"],
         "description": "",
         "parameters": [
           {
@@ -294,6 +257,96 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/refreshtoken": {
+      "post": {
+        "tags": ["auth"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "refreshToken": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/auth/login": {
+      "post": {
+        "tags": ["auth"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/auth/logout/{id}": {
+      "post": {
+        "tags": ["auth"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/auth/getlogins": {
+      "get": {
+        "tags": ["auth"],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
